remove getDatabaseRefByAlias from TopologyGraphDbmsModel ()